# Effekt

./: .clang-format  .clang-tidy  .gitignore  AudioFileHandler.cpp  BinauralPanner.cpp  BinauralPanner_runner.cpp  CMakeLists.txt  Cmakelists.txt  Makefile  README.md  SVF.cpp  SVF_runner.cpp  proj.cpp  useful_commands.md  visualize.py
docs/: main.tex
src/: amp_filter.h  audio_handler.cpp  audio_handler.h  binaural-panner-runner.cpp  binaural-panner.cpp  binaural-panner.h  binaural_panner.cpp  binaural_panner.h  bit-crusher.cpp  bit-crusher.h  cabinet.cpp  cabinet.h  crybaby.cpp  crybaby.h  envelope-follower.cpp  envelope-follower.h  envelope_follower.cpp  envelope_follower.h  fft.h  main.cpp  overdrive.cpp  overdrive.h  pitch_shifter.cpp  pitch_shifter.h  stereo-to-mono-runner.cpp  stereo-to-mono.cpp  stereo_to_mono.cpp  svf-runner.cpp  svf.cpp  svf.h
